--- a/register.html
+++ b/register.html
@@ -141,7 +141,7 @@
                 <br>
                 <input type="submit" value="Submit">
                 <input type="reset" value="Reset"><br><br>
-                <a href="Index.html"><input type="button" value="Login">
+                <a href="index.html"><input type="button" value="Login">
             </form>
         </center>
     </body>
